# Deep-Reinforcement-Learning-Hands-On-Third-Edition

./: CLAUDE.md  pyproject.toml
.claude/: settings.local.json
Chapter01/: what_is_reinforcement_learning.ipynb
Chapter02/: openai_gymapi_and_gymnasium.ipynb
Chapter03/: 03_atari_gan.py  04_atari_gan_ignite.py  Summary.md  dl_pytorch.ipynb
Chapter04/: 01_cartpole.py  cross_entropy.ipynb
