[project]
name = "deep-reinforcement-learning-hands-on-third-edition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[accept-rom-license,atari,classic-control]>=1.2.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "moviepy>=2.2.1",
    "mypy>=1.18.2",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "ptan>=0.4",
    "pytest>=8.4.2",
    "pytorch-ignite>=0.5.3",
    "ray[tune]>=2.51.1",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchrl>=0.10.1",
    "torchvision>=0.24.0",
]
